# TheVooDooBox

./: .gitignore  README.md  WORKFLOW_VERIFICATION_COMPLETE.md  capture_build.py  docker-compose.yaml  mallabondock_AIAnalysisButton.tsx  mallabondock_AnalysisArena.tsx  mallabondock_App.tsx  mallabondock_FloatingChat.tsx  mallabondock_LabDashboard.tsx  mallabondock_ReportView.tsx  mallabondock_SubmissionModal.tsx  mallabondock_TaskDashboard.tsx  mallabondock_mallabApi.ts  task.md  walkthrough.md
TheVooDooBox-main/: .dockerignore  .env.example  .env_v2.example  .gitignore  DEPLOYMENT.md  Dockerfile.agent  Modelfile_Analyst  README.md  Start-DevEnvironment.ps1  WORKFLOW_TEST_RESULTS.md  build_agent_docker.ps1  build_error_5.txt  docker-compose.yaml  docker-compose_v2.yaml  implementation_plan.md  launch_mallab.ps1  launch_mallab_v2.ps1  test_chat_context.py
TheVooDooBox-main/agent-windows/: Cargo.toml  Dockerfile.build
TheVooDooBox-main/agent-windows/browser_extension/: background.js  content.js  manifest.json
TheVooDooBox-main/agent-windows/src/: decoder.rs  kernel_bridge.rs  main.rs  signature_verifier.rs
TheVooDooBox-main/kernel-driver/: BUILD.md  Cargo.toml  Dockerfile.driver
TheVooDooBox-main/kernel-driver/src/: lib.rs
agent-mock/: Cargo.toml
agent-windows/: build.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: add_forensic_report_json.sql  fix_duplicate_task_ids.sql  force_fix_constraint.sql
backend/src/: proxmox.rs  reports.rs  stream.rs
docs/: 00_INDEX.md  01_OVERVIEW.md  02_ARCHITECTURE.md  03_AI_RAG.md  04_HYPER_BRIDGE.md  05_INSTALLATION.md  05_SANDBOX_AND_AGENT.md  06_FRONTEND_DASHBOARD.md  06_SCRIPTS.md  07_INSTALLATION.md  07_INSTALLATION_v2.md  08_SCRIPTS.md  09_USER_GUIDE.md  10_AGENT_BUILD_DEPLOY.md  10_VNC_SPICE_INTEGRATION.md  11_REPORTING_AI.md  12_AGENT_BUILD_DEPLOY.md  13_AGENT_DEPLOYMENT.md  13_OLLAMA_TESTING.md  14_AGENT_TROUBLESHOOTING.md  15_ANALYSIS.md  (+11 more)
(+219 files in other folders)
