[package]
name = "hyper-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
actix-web-actors = "4.2"
tokio-stream = "0.1"
actix = "0.13"
actix-cors = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "macros", "any"] }
chrono = { version = "0.4", features = ["serde"] }
actix-multipart = "0.7.2"
actix-files = "0.6.9"
sha2 = "0.10"
genpdf = { version = "0.2.0", features = ["images"] }
codepage-437 = "0.1"
image = "0.23"
