[package]
name = "mallab-agent-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
chrono = "0.4"
netstat2 = "0.9"
notify = "6.1"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "memoryapi", "winbase", "handleapi", "psapi", "winioctl", "winreg", "winevt", "errhandlingapi"] }
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart"] }
sha2 = "0.10"
hex = "0.4"
screenshots = "0.8"
image = "0.24"
